--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Full Kasir</title>
 
 
+    <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/index.css">
 
 
@@ -111,7 +112,7 @@
             <div class="text-animate">
                 <h3>
                     Index
-                    <span class="animate" style="--i:1;"></span>
+                    <span class="animate" style="--i:3;"></span>
                 </h3>
             </div>
 
@@ -119,7 +120,7 @@
             <p>
                 Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Cum illum error odit unde quam quidem modi.
-                <span class="animate" style="--i:2;"></span>
+                <span class="animate" style="--i:3;"></span>
             </p>
             
             
