--- a/index.html
+++ b/index.html
@@ -139,6 +139,6 @@
 <!--   -   -   K   -   -   O   -   -   N   -   -   T   -   -   E   -   -   N   -   -   -->
 
 
-    <script src="script/index.js"></script>
+    <script src="script/foral.js"></script>
 </body>
 </html>
