--- a/database.html
+++ b/database.html
@@ -287,7 +287,6 @@
 <!--   -   -   K   -   -   O   -   -   N   -   -   T   -   -   E   -   -   N   -   -   -->
 
 
-    <script src="script/index.js"></script>
-    <script src="script/tambah.js"></script>
+    <script src="script/foral.js"></script>
 </body>
 </html>
