--- a/database.html
+++ b/database.html
@@ -55,8 +55,7 @@
         <nav class="navbar">
             <a href="index.html">Index</a>
             <a href="kasir.html">Kasir</a>
-            <a href="tambah.html" class="active">Tambah</a>
-            <a href="database.html">Database</a>
+            <a href="database.html" class="active">Database</a>
             <a href="history.html">History</a>
             <a href="login.html">Logout</a>
 
