--- a/database.html
+++ b/database.html
@@ -12,7 +12,7 @@
     
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/konten.css">
-    
+    <link rel="stylesheet" href="style/a.database.css">
 
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -110,7 +110,7 @@
 
             <div class="text-animate">
                 <h3>
-                    Tambah
+                    Database
                     <span class="animate" style="--i:1;"></span>
                 </h3>
             </div>
