--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <link rel="stylesheet" href="style/header.css">
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/a.index.css">
 
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
