--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
 
 
         <nav class="navbar">
-            <a href="index.html" class="active">Index</a>
             <a href="kasir.html">Kasir</a>
             <a href="database.html">Database</a>
             <a href="history.html">History</a>
-            <a href="login.html">Logout</a>
+            <a href="index.html" class="active">Logout</a>
 
 
             <span class="animate" style="--i:2;"></span>
