--- a/database.html
+++ b/database.html
@@ -160,17 +160,17 @@
 
                     <div class="filterEntries">
                         <div class="entries">
-                            Show <select name="" id="table_size">
+                            <select name="" id="table_size">
                                 <option value="10">10</option>
                                 <option value="20">20</option>
                                 <option value="50">50</option>
                                 <option value="100">100</option>
-                            </select> entries
+                            </select>
                         </div>
 
                         <div class="filter">
-                            <label for="search">Search:</label>
-                            <input type="search" name="" id="search" placeholder="Masukan Data">
+                            <label for="search"></label>
+                            <input type="search" name="" id="search" placeholder="Butuh bantuan?">
                         </div>
                     </div>
 
@@ -251,6 +251,21 @@
 
 
                 </table>
+
+
+
+                <footer>
+                    <span>1 ke 10 dari 50 daftar</span>
+                    <div class="pagination">
+                        <button>Prev</button>
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button>4</button>
+                        <button>5</button>
+                        <button>Next</button>
+                    </div>
+                </footer>
             </div>
 
 
