--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         <a href="#" class="logo">
-            SMB
+            Username
             <span class="animate" style="--i:1;"></span>
         </a>
 
@@ -103,7 +103,7 @@
 
 
             <h1>
-                Minimarket Online
+                Miseriap
                 <span class="animate" style="--i:3;"></span>
             </h1>
 
