--- a/database.html
+++ b/database.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="addItemBtn">
-                        <button>Tambahkan Barang Baru</button>
+                        <button>Tambahkan barang masuk</button>
                     </div>
                 </header>
 
@@ -193,9 +193,9 @@
                         </tr>
                     </thead>
 
-                    <tbody>
-                        <tr>
-                            <td class="empty" colspan="11" align="center">.</td></tr>
+                    <tbody class="userInfo">
+                        <!--<tr>
+                            <td class="empty" colspan="11" align="center">.</td></tr>-->
                         
                         <!--
                         <tr>
@@ -259,15 +259,15 @@
 
 
                 <footer>
-                    <span>1 ke 10 dari 50 daftar</span>
+                    <span class="showEntries">1 ke 10 dari 50 daftar</span>
                     <div class="pagination">
-                        <button>Prev</button>
+                        <!-- <button>Prev</button>
                         <button class="active">1</button>
                         <button>2</button>
                         <button>3</button>
                         <button>4</button>
                         <button>5</button>
-                        <button>Next</button>
+                        <button>Next</button> -->
                     </div>
                 </footer>
             </div>
@@ -367,7 +367,7 @@
         <div class="popup">
             <header>
                 <h2 class="modalTitle">
-                    Tambahkan stock barang Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, minus!
+                    Tambah
                 </h2>
                 <button class="closeBtn">&times;</button>
             </header>
@@ -444,7 +444,7 @@
                     </div>
                 </form>
             </div>
-            <footer>
+            <footer class="popupFooter">
                 <button form="myForm" class="submitBtn">Tambah</button>
             </footer>
         </div>
